# agentic-ai

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/codernew/: README.md  pyproject.toml
3_crew/codernew/output/: code_and_output.txt
3_crew/codernew/src/codernew/: crew.py  main.py
3_crew/codernew/src/codernew/config/: agents.yaml  tasks.yaml
3_crew/debate/output/: oppose.md  propose.md
3_crew/debatenew/: README.md  pyproject.toml
3_crew/debatenew/output/: decide.md  oppose.md  propose.md
3_crew/debatenew/src/debatenew/: crew.py  main.py
3_crew/debatenew/src/debatenew/config/: agents.yaml  tasks.yaml
3_crew/engineering_teamnew/: README.md  pyproject.toml
3_crew/engineering_teamnew/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_teamnew/src/engineering_teamnew/: crew.py  main.py
3_crew/engineering_teamnew/src/engineering_teamnew/config/: agents.yaml
3_crew/financial_researchernew/: README.md  pyproject.toml
3_crew/financial_researchernew/output/: report.md
3_crew/financial_researchernew/src/financial_researchernew/: crew.py  main.py
3_crew/financial_researchernew/src/financial_researchernew/config/: agents.yaml  tasks.yaml
3_crew/stock_pickernew/: README.md  debug_output.txt  pyproject.toml
3_crew/stock_pickernew/output/: decisions.md  research_report.json  trending_companies.json
3_crew/stock_pickernew/src/stock_pickernew/: crew - Copy.py  crew.py  main.py
3_crew/stock_pickernew/src/stock_pickernew/config/: agents.yaml  tasks.yaml
3_crew/stock_pickernew/src/stock_pickernew/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent14.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent3.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  creator.py  messages.py  world.py
5_autogen/sandbox/: flights.md  selected_flight.md
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  accounts_server.py
6_mcp/sandbox/: banoffee.md
guides/: 11_async_python.ipynb
(+1 files in other folders)
