[project]
name = "codernew"
version = "0.1.0"
description = "codernew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
codernew = "codernew.main:run"
run_crew = "codernew.main:run"
train = "codernew.main:train"
replay = "codernew.main:replay"
test = "codernew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
