[project]
name = "engineering_teamnew"
version = "0.1.0"
description = "engineering_teamnew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "gradio>=5.46.1",
]

[project.scripts]
engineering_teamnew = "engineering_teamnew.main:run"
run_crew = "engineering_teamnew.main:run"
train = "engineering_teamnew.main:train"
replay = "engineering_teamnew.main:replay"
test = "engineering_teamnew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
