[project]
name = "stock_pickernew"
version = "0.1.0"
description = "stock_pickernew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
stock_pickernew = "stock_pickernew.main:run"
run_crew = "stock_pickernew.main:run"
train = "stock_pickernew.main:train"
replay = "stock_pickernew.main:replay"
test = "stock_pickernew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
